--- a/style.css
+++ b/style.css
@@ -7,6 +7,35 @@ a {
     text-decoration: none;
 }
 
+section {
+    padding: 0 8%;
+}
+
+/* Style de la div head de chaque section */
+.head {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    color: #c1784a
+}
+
+.title {
+    margin: 60px 0;
+    font-weight: bold;
+    color: #dc976c;
+    position: relative;
+    margin-left: 15px;
+}
+
+.title::after {
+    position: absolute;
+    left: -15px;
+    content: "";
+    height: 100%;
+    background-color: #fff;
+    width: 5px;
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -50,24 +79,6 @@ body {
 
 .skip-link:focus {
     z-index: 999;
-}
-
-/* Style du titre */
-.title {
-    margin: 60px 0;
-    font-weight: bold;
-    color: #dc976c;
-    position: relative;
-    margin-left: 15px;
-}
-
-.title::after {
-    position: absolute;
-    left: -15px;
-    content: "";
-    height: 100%;
-    background-color: #fff;
-    width: 5px;
 }
 
 /* NavBar */
@@ -156,7 +167,7 @@ nav .links li:nth-child(-n + 4) a:hover::after {
     flex-direction: column;
     position: relative;
     color: #fff;
-    background-image: url(Image/pexels-ylanite-koppens-776654.jpg);
+    background-image: url(Images/pexels-ylanite-koppens-776654.jpg);
 }
 
 /* Div Hero-text CSS */
@@ -238,30 +249,133 @@ nav .links li:nth-child(-n + 4) a:hover::after {
     box-shadow: 0 0 10px #c1784a;
 }
 
-/* Section Nouveaux évènements CSS */
 
-.nouveaux-evenements {
+/* Section prochains évènements CSS */
+.prochains-evenements {
     margin-top: 100px;
     margin-bottom: 50px;
-    padding: 0 10%;
     width: 100%;
 }
 
-/* Section Nouveaux tournois CSS */
-.nouveaux-tournois {
+/* Section Nouveaux évènement CSS */
+.nouveaux-evenements {
     margin-top: 100px;
     margin-bottom: 50px;
-    padding: 0 10%;
     width: 100%;
+}
+
+/* Card section prochains et nouveaux evenements */
+.card {
+    display: flex;
+    gap: 32px;
+    width: 100%;
+    overflow: hidden;
+    overflow-x: scroll;
+    scroll-snap-type: x mandatory;
+    -ms-overflow-style: none;
+    /* Internet Explorer 10+ */
+    scrollbar-width: none;
+    /* Firefox */
+}
+
+.card::-webkit-scrollbar {
+    display: none;
+    /* Safari and Chrome */
+}
+
+.card-container {
+    max-width: 300px;
+    background-color: #131111;
+    border-radius: 15px;
+    padding: 2rem 2rem 1rem 2rem;
+    color: #d7d3d3;
+    scroll-snap-align: start;
+}
+
+.card-container:hover {
+    transform: scale(102%);
+    transition: .2s ease-in;
+}
+
+.card-content_title {
+    font-size: 1.375rem;
+    color: #fff;
+}
+
+.card-container .card-content .flex-row, .card-container .card-content .card-link {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.card-content_price,
+.card-content_seats,
+.card-link button {
+    display: flex;
+    align-items: center;
+    padding: 0.4em 0;
+    color: #c1784a;
+}
+
+.card-container .card-content .card-link button {
+    border: #c1784a solid 1px;
+    border-radius: 5%;
+    color: #fff;
+    padding: 7px;
+    background-color: transparent;
+}
+
+.card-container .card-content .card-link button:hover {
+    background-color: rgba(140, 136, 136, 0.4);
+}
+
+.card-container .card-content .card-link .ajout-panier {
+    filter: invert(1);
+    width: 30%;
+    padding-left: 5px;
+    max-width: 30px;
+}
+
+.card-container .card-container_image {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-bottom: 30px;
+}
+
+.card-container .card-container_image img {
+    width: 250px;
+    height: 300px;
+    border-radius: 3%;
+}
+
+/* Bouton slider section Nouveaux et prochains evenements */
+.btn-container {
+    display: flex;
+    gap: 16px;
+}
+
+.btn-slide {
+    width: 62px;
+    height: 62px;
+    border-radius: 100%;
+    background-color: #131111;
+    border: solid 1px;
+}
+
+.btn-slide:hover {
+    background-color: #1f1b1b;
+}
+
+.btn-left {
+    transform: scale(-1);
 }
 
 
 /* Section à propos CSS */
-
 .a-propos {
     margin-top: 100px;
     margin-bottom: 50px;
-    padding: 0 10%;
     width: 100%;
 }
 
@@ -312,11 +426,9 @@ nav .links li:nth-child(-n + 4) a:hover::after {
 }
 
 /* Section Categorie Evenements CSS */
-
 .categorie-evenement {
     margin-top: 100px;
     margin-bottom: 50px;
-    padding: 0 10%;
     width: 100%;
 }
 
@@ -371,7 +483,6 @@ nav .links li:nth-child(-n + 4) a:hover::after {
 }
 
 /* Footer CSS */
-
 .footer {
     display: flex;
     flex-flow: row wrap;
@@ -501,109 +612,4 @@ nav .links li:nth-child(-n + 4) a:hover::after {
     .footer .footer_nav {
         flex: 2 0px;
     }
-}
-
-.card {
-    display: flex;
-    gap: 32px;
-    width: 100%;
-    overflow: hidden;
-    overflow-x: scroll;
-    scroll-snap-type: x mandatory;
-    -ms-overflow-style: none;
-    /* Internet Explorer 10+ */
-    scrollbar-width: none;
-    /* Firefox */
-}
-
-.card::-webkit-scrollbar {
-    display: none;
-    /* Safari and Chrome */
-}
-
-.card-container {
-    max-width: 300px;
-    background-color: #131111;
-    border-radius: 15px;
-    padding: 2rem 2rem 1rem 2rem;
-    color: #d7d3d3;
-    scroll-snap-align: start;
-}
-
-.card-container:hover {
-    transform: scale(102%);
-    transition: .2s ease-in;
-}
-
-.card-content_title {
-    font-size: 1.375rem;
-    color: #fff;
-}
-
-.card-container .card-content .flex-row, .card-container .card-content .card-link {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.card-content_price,
-.card-content_seats,
-.card-link button {
-    display: flex;
-    align-items: center;
-    padding: 0.4em 0;
-    color: #c1784a;
-}
-
-.card-container .card-content .card-link button {
-    border: #c1784a solid 1px;
-    border-radius: 5%;
-    color: #fff;
-    padding: 7px;
-    background-color: transparent;
-}
-
-.card-container .card-content .card-link button:hover {
-    background-color: rgba(140, 136, 136, 0.4);
-}
-
-.card-container .card-content .card-link .ajout-panier {
-    filter: invert(1);
-    width: 30%;
-    padding-left: 5px;
-    max-width: 30px;
-}
-
-.card-container .card-container_image {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding-bottom: 30px;
-}
-
-.card-container .card-container_image img {
-    width: 250px;
-    height: 300px;
-    border-radius: 3%;
-}
-
-.btn-container {
-    display: flex;
-    gap: 16px;
-}
-
-.btn-slide {
-    width: 62px;
-    height: 62px;
-    border-radius: 100%;
-    background-color: #131111;
-    border: solid 1px;
-}
-
-.btn-slide:hover {
-    background-color: #1f1b1b;
-}
-
-.btn-left {
-    transform: scale(-1);
 }
