--- a/style.css
+++ b/style.css
@@ -712,7 +712,7 @@ nav .links li:nth-child(-n + 3) a:hover::after {
 }
 
 .recherche {
-    color: #555;
+    color: #ffffff;
     max-height: 45px;
     display: flex;
     align-items: center;
