--- a/style.css
+++ b/style.css
@@ -33,14 +33,17 @@ a {
 }
 
 * {
+    /* Surement le modifier */
     margin: 0;
     padding: 0;
+    /* Sa c'est bien */
     box-sizing: border-box;
-    font-family: "poppins", sans-serif;
+
     scroll-behavior: smooth;
 }
 
 body {
+    font-family: "poppins", sans-serif;
     height: 100vh;
     color: white;
     width: 100%;
@@ -48,13 +51,13 @@ body {
 }
 
 section {
-    padding: 0 8%;
+    padding: 0 130px;
 }
 
 /* NavBar */
 nav {
     position: fixed;
-    backdrop-filter: blur(1px);
+    backdrop-filter: blur(2px);
     width: 100%;
     padding: 10px 3%;
     background-color: transparent;
@@ -467,25 +470,25 @@ nav .links li:nth-child(-n + 3) a:hover::after {
     width: 100%;
 }
 
-.categorie-evenement .content {
+.content {
     display: grid;
     grid-template-columns: auto auto auto auto;
     grid-template-rows: auto;
     gap: 32px;
 }
 
-.categorie-evenement .content .cart {
+.content .cart {
     cursor: pointer;
     position: relative;
     height: 250px;
 }
 
-.categorie-evenement .content .cart:hover {
+.content .cart:hover {
     transform: scale(97%);
     transition: 0.2s;
 }
 
-.categorie-evenement .content .cart img {
+.content .cart img {
     height: 100%;
     width: 100%;
     object-fit: cover;
@@ -493,7 +496,7 @@ nav .links li:nth-child(-n + 3) a:hover::after {
     filter: brightness(70%);
 }
 
-.categorie-evenement .content .cart .content {
+.content .cart .content {
     position: absolute;
     color: #fff;
     top: 0;
@@ -504,7 +507,7 @@ nav .links li:nth-child(-n + 3) a:hover::after {
     align-items: center;
 }
 
-.categorie-evenement .cart .content h2 {
+.cart .content h2 {
     position: absolute;
     font-size: 1.25em;
     bottom: 16px;
@@ -512,7 +515,7 @@ nav .links li:nth-child(-n + 3) a:hover::after {
     font-weight: bold;
 }
 
-.categorie-evenement .cart .content p:nth-child(3) {
+.cart .content p:nth-child(3) {
     margin-bottom: 25px;
 }
 
@@ -706,7 +709,6 @@ nav .links li:nth-child(-n + 3) a:hover::after {
     margin: 30px 10px 0 10px;
     font-size: 1.4rem;
     color: #dc976c;
-    text-decoration: underline;
 }
 
 .filter-form h2 {
@@ -861,6 +863,10 @@ button[type="submit"]:hover {
     cursor: pointer;
 }
 
+.dropdown.active .options div a {
+    display: block;
+}
+
 .dropdown .options div:hover {
     background: #62baea;
     color: #fff;
@@ -870,20 +876,24 @@ button[type="submit"]:hover {
 /* CSS evenement.php page */
 .evenement {
     position: relative;
-    display: flex;
     top: 12vh;
-    justify-content: space-around;
     border: 2px solid #dc976c5e;
     border-radius: 10px;
     column-gap: 1rem;
     padding: 40px;
-    height: 600px;
     padding-bottom: 100px;
     margin-left: 50px;
     margin-right: 70px;
 }
 
-.evenement .evenement-text {
+.evenement .evenement-header {
+    position: relative;
+    display: flex;
+    justify-content: space-around;
+
+}
+
+.evenement .evenement-header .evenement-text {
     display: flex;
     position: relative;
     flex-direction: column;
@@ -891,36 +901,23 @@ button[type="submit"]:hover {
     height: 500px;
 }
 
-.evenement .evenement-text>* {
+.evenement .evenement-header .evenement-text>* {
     margin-bottom: 10px;
 }
 
-.evenement .evenement-text .evenement-attribut {
+.evenement .evenement-header .evenement-text .evenement-attribut {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
 }
 
-.evenement .evenement-text .evenement-attribut p {
+.evenement .evenement-header .evenement-text .evenement-attribut p {
     background-color: #5a5a5a;
     padding: 10px;
     border-radius: 10%;
 }
 
-
-.evenement .evenement-text .btnReserve {
-    position: absolute;
-    font-size: 0.875rem;
-    background-color: #c1784a;
-    color: white;
-    padding: 20px 25px 20px 25px;
-    border-radius: 15%;
-    bottom: 0;
-    left: 0;
-}
-
-.evenement .evenement-text .btnReserve:hover {
-    transform: scale(102%);
-    transition: .2s ease-in;
-    cursor: pointer;
+.evenement .evenement-header .evenement-text form {
+    display: flex;
+    flex-direction: column;
 }
